constrainttempalte.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sazurev1requiredannotations
spec:
  crd:
    spec:
      names:
        kind: K8sAzureV1RequiredAnnotations
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            annotations:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sazurev1requiredannotations

        violation[{"msg": msg, "details": {"missing_annotations": missing}}] {
          provided := {annotation | input.review.object.metadata.annotations[annotation]}
          required := {annotation | annotation := input.parameters.annotations[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf
		  }
